@@ -3,9 +3,10 @@ All notable changes to this project will be documented in this file.
 
 ## [3.1.1] - 2017-05-04
 # Added
-- Bert-E adds a link to the commit URL in the message posted for a build failed.
+- Bert-E adds a link to the commit URL in the message posted for a failed build
 - Bert-E's REST API was bootstrapped
 - REST API 'rebuild_queues' command
+- JIRA checks can be bypassed according to the source branch prefix (e.g. "documentation")
 
 ## [3.1.0] - 2017-04-21
 # Changed
